[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
log = "0.4.17"
rand = "0.8.5"
env_logger = "0.10.1"
protocol = { path = "../protocol" }
tokio = { version = "1.35.1", features = ["full"] }