[package]
name = "pulsar-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
futures = "0.3.28"
log = "0.4.17"
opentelemetry = "0.19.0"
opentelemetry-jaeger = "0.18.0"
rand = "0.8.5"
tarpc = { version = "0.33.0", features = ["full"]}
tokio = { version = "1.12.0", features = ["full"]}
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
valu3 = "0.1.8"
