[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parquet = "50.0.0"
arrow = "50.0.0"
prettytable = "0.10.0"
valu3 = { path = "../valu3/valu3" }
valu3-parquet = { path = "../valu3/valu3_parquet" }
